// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can add new items a WishList - 2 1`] = `
Array [
  Object {
    "op": "add",
    "path": "/items/0",
    "value": Object {
      "image": "",
      "name": "Dog VHS",
      "price": 2.45,
    },
  },
  Object {
    "op": "replace",
    "path": "/items/0/name",
    "value": "The Dog Video",
  },
]
`;

exports[`can add new items a WishList 1`] = `
Object {
  "items": Array [
    Object {
      "image": "",
      "name": "The Dog Video",
      "price": 2.45,
    },
  ],
}
`;

exports[`can add new items a WishList 2`] = `
Array [
  Object {
    "items": Array [
      Object {
        "image": "",
        "name": "Dog VHS",
        "price": 2.45,
      },
    ],
  },
  Object {
    "items": Array [
      Object {
        "image": "",
        "name": "The Dog Video",
        "price": 2.45,
      },
    ],
  },
]
`;
